--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express-myconnection": "^1.0.4",
+    "morgan": "^1.9.1",
     "mysql": "^2.16.0",
     "mysql-connection": "^1.0.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "winston": "^3.2.1"
   }
 }
